fix: Safari small screen wrap

--- a/source/assets/styles/sections/intro.scss
+++ b/source/assets/styles/sections/intro.scss
@@ -216,6 +216,7 @@
 		list-style: none;
 		display: flex;		
 		justify-content: flex-end;
+		flex-wrap: wrap;
 		gap:0;//var(--pad);
 	}
 
